# EHT-C

./: .travis.yml  CMakeLists.txt  Readme.md  format.sh
include/: ciphersuite.h  config.h.in  decrypt.h  encoding.h  encrypt.h  keygen.h  matrix.h  utils.h
src/: decrypt.c  encoding.c  encrypt.c  keygen.c  matrix.c  utils.c
test/: CMakeLists.txt  bench_cycles.c  test_correctness.c
